Fixed tests!