@@ -5,11 +5,12 @@ import ita.softserve.course_evaluation.dto.QuestionDtoMapper;
 import ita.softserve.course_evaluation.entity.Question;
 import ita.softserve.course_evaluation.repository.QuestionRepository;
 import ita.softserve.course_evaluation.service.impl.QuestionServiceImpl;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
@@ -17,13 +18,12 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.mockStatic;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
@@ -38,144 +38,101 @@ public class QuestionServiceImplTests {
     @InjectMocks
     private QuestionServiceImpl questionService;
 
+    private static Question expected;
+    private static QuestionDto expectedDto;
+
+    @BeforeAll
+    public static void beforeAll(){
+        expected = new Question();
+        expected.setId(1L);
+        expected.setQuestionText("Text");
+        expected.setPattern(true);
+
+        expectedDto = QuestionDtoMapper.toDto(expected);
+    }
+
+    @AfterEach
+    public void afterEach(){
+        verifyNoMoreInteractions(questionRepository);
+    }
+
     @Test
     public void testGetAllQuestionIfExist(){
-        try (MockedStatic<QuestionDtoMapper> mockedStatic = mockStatic(QuestionDtoMapper.class)) {
-            List<Question> questions = Collections.singletonList(new Question());
-            List<QuestionDto> expected = Collections.singletonList(new QuestionDto());
+        when(questionRepository.findAll()).thenReturn(List.of(expected));
 
-            when(questionRepository.findAll()).thenReturn(questions);
-            mockedStatic.when(() -> QuestionDtoMapper.toDto(questions)).thenReturn(expected);
+        List<QuestionDto> actual = questionService.getAllQuestion();
 
-            List<QuestionDto> actual = questionService.getAllQuestion();
+        assertFalse(actual.isEmpty());
 
-            assertEquals(expected, actual);
-
-            verify(questionRepository, times(1)).findAll();
-            mockedStatic.verify(() -> QuestionDtoMapper.toDto(questions), times(1));
-            verifyNoMoreInteractions(questionRepository);
-            mockedStatic.verifyNoMoreInteractions();
-        }
+        verify(questionRepository, times(1)).findAll();
     }
 
     @Test
     public void testGetAllQuestionIfNotExist(){
-        try (MockedStatic<QuestionDtoMapper> mockedStatic = mockStatic(QuestionDtoMapper.class)) {
-            List<Question> questionsEmptyList = Collections.emptyList();
-            List<QuestionDto> questionDtoEmptyList = Collections.emptyList();
+        when(questionRepository.findAll()).thenReturn(Collections.emptyList());
 
-            when(questionRepository.findAll()).thenReturn(questionsEmptyList);
-            mockedStatic.when(() -> QuestionDtoMapper.toDto(questionsEmptyList)).thenReturn(questionDtoEmptyList);
+        List<QuestionDto> actual = questionService.getAllQuestion();
 
-            List<QuestionDto> actual = questionService.getAllQuestion();
+        assertTrue(actual.isEmpty());
 
-            assertTrue(actual.isEmpty());
-
-            verify(questionRepository, times(1)).findAll();
-            mockedStatic.verify(() -> QuestionDtoMapper.toDto(questionsEmptyList), times(1));
-            verifyNoMoreInteractions(questionRepository);
-            mockedStatic.verifyNoMoreInteractions();
-        }
+        verify(questionRepository, times(1)).findAll();
     }
 
     @Test
     public void testSaveQuestion(){
-        try (MockedStatic<QuestionDtoMapper> mockedStatic = mockStatic(QuestionDtoMapper.class)) {
-            QuestionDto questionDto = new QuestionDto();
-            Question expected = new Question();
+        when(questionRepository.save(any())).thenReturn(expected);
 
-            mockedStatic.when(() -> QuestionDtoMapper.fromDto(questionDto)).thenReturn(expected);
-            when(questionRepository.save(expected)).thenReturn(expected);
+        Question actual = questionService.saveQuestion(expectedDto);
 
-            Question actual = questionService.saveQuestion(questionDto);
+        assertEquals(expected.getId(), actual.getId());
 
-            assertEquals(expected, actual);
-
-            mockedStatic.verify(() -> QuestionDtoMapper.fromDto(questionDto), times(1));
-            verify(questionRepository, times(1)).save(expected);
-            mockedStatic.verifyNoMoreInteractions();
-            verifyNoMoreInteractions(questionRepository);
-        }
+        verify(questionRepository, times(1)).save(any());
     }
 
     @Test
     public void testCorrectFindQuestionById(){
-        try (MockedStatic<QuestionDtoMapper> mockedStatic = mockStatic(QuestionDtoMapper.class)) {
-            Question question = new Question();
-            QuestionDto expected = new QuestionDto();
+        when(questionRepository.findById(anyLong())).thenReturn(Optional.of(expected));
 
-            when(questionRepository.findById(anyLong())).thenReturn(Optional.of(question));
-            mockedStatic.when(() -> QuestionDtoMapper.toDto(question)).thenReturn(expected);
+        QuestionDto actual = questionService.findQuestionById(anyLong());
 
-            QuestionDto actual = questionService.findQuestionById(anyLong());
+        assertEquals(expected.getId(), actual.getId());
 
-            assertEquals(expected, actual);
-
-            verify(questionRepository, times(1)).findById(anyLong());
-            mockedStatic.verify(() -> QuestionDtoMapper.toDto(question), times(1));
-            verifyNoMoreInteractions(questionRepository);
-            mockedStatic.verifyNoMoreInteractions();
-        }
+        verify(questionRepository, times(1)).findById(anyLong());
     }
 
     @Test
     public void testExceptionFindQuestionById(){
-        try (MockedStatic<QuestionDtoMapper> mockedStatic = mockStatic(QuestionDtoMapper.class)) {
-            when(questionRepository.findById(anyLong())).thenReturn(Optional.empty());
+        when(questionRepository.findById(anyLong())).thenReturn(Optional.empty());
 
-            Throwable exception = assertThrows(RuntimeException.class, () -> questionService.findQuestionById(anyLong()));
+        Throwable exception = assertThrows(RuntimeException.class, () -> questionService.findQuestionById(anyLong()));
 
-            assertEquals(String.format("Question was not found for id: %d", 0), exception.getMessage());
+        assertEquals(String.format("Question was not found for id: %d", 0), exception.getMessage());
 
-            verify(questionRepository, times(1)).findById(anyLong());
-            mockedStatic.verify(() -> QuestionDtoMapper.toDto(any(Question.class)), never());
-            verifyNoMoreInteractions(questionRepository);
-        }
+        verify(questionRepository, times(1)).findById(anyLong());
     }
 
     @Test
     public void testDeleteQuestionById(){
-        try (MockedStatic<QuestionDtoMapper> mockedStatic = mockStatic(QuestionDtoMapper.class)) {
-            Question question = new Question();
-            QuestionDto questionDto = new QuestionDto();
+        when(questionRepository.findById(anyLong())).thenReturn(Optional.of(expected));
 
-            when(questionRepository.findById(anyLong())).thenReturn(Optional.of(question));
-            mockedStatic.when(() -> QuestionDtoMapper.toDto(question)).thenReturn(questionDto);
-            mockedStatic.when(() -> QuestionDtoMapper.fromDto(questionDto)).thenReturn(question);
-            doNothing().when(questionRepository).delete(question);
+        doNothing().when(questionRepository).delete(expected);
 
-            questionService.deleteQuestionById(anyLong());
+        questionService.deleteQuestionById(anyLong());
 
-            verify(questionRepository, times(1)).findById(anyLong());
-            mockedStatic.verify(() -> QuestionDtoMapper.toDto(question), times(1));
-            mockedStatic.verify(() -> QuestionDtoMapper.fromDto(questionDto), times(1));
-            verify(questionRepository, times(1)).delete(question);
-            mockedStatic.verifyNoMoreInteractions();
-            verifyNoMoreInteractions(questionRepository);
-        }
+        verify(questionRepository, times(1)).findById(anyLong());
+        verify(questionRepository, times(1)).delete(expected);
     }
 
     @Test
     public void testUpdateQuestion(){
-        try (MockedStatic<QuestionDtoMapper> mockedStatic = mockStatic(QuestionDtoMapper.class)) {
-            Question question = new Question();
-            QuestionDto expected = new QuestionDto();
+        when(questionRepository.findById(anyLong())).thenReturn(Optional.of(expected));
+        when(questionRepository.save(any())).thenReturn(expected);
 
-            when(questionRepository.findById(anyLong())).thenReturn(Optional.of(question));
-            mockedStatic.when(() -> QuestionDtoMapper.toDto(question)).thenReturn(expected);
-            mockedStatic.when(() -> QuestionDtoMapper.fromDto(expected)).thenReturn(question);
-            when(questionRepository.save(question)).thenReturn(question);
+        QuestionDto actual = questionService.updateQuestion(expectedDto, anyLong());
 
-            QuestionDto actual = questionService.updateQuestion(expected, anyLong());
+        assertEquals(expectedDto.getId(), actual.getId());
 
-            assertEquals(expected, actual);
-
-            verify(questionRepository, times(1)).findById(anyLong());
-            mockedStatic.verify(() -> QuestionDtoMapper.toDto(question), times(1));
-            mockedStatic.verify(() -> QuestionDtoMapper.fromDto(expected), times(1));
-            verify(questionRepository, times(1)).save(question);
-            mockedStatic.verifyNoMoreInteractions();
-            verifyNoMoreInteractions(questionRepository);
-        }
+        verify(questionRepository, times(1)).findById(anyLong());
+        verify(questionRepository, times(1)).save(any());
     }
 }
